--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		{% endblock %}
 
 		<footer>
-			Jens B&auml;ckvall
+			Jens B&auml;ckvall 2015
 			<br>
 			jensbackvall@t-nova.org
 		</footer>
